@@ -223,6 +223,7 @@ upgrade PHP if you have not done so prior to upgrading MediaWiki.
   illegal characters.
 * (bug 27111) Cascading foreign file repos now fetch shared descriptions properly
 * EXIF below sea level GPS altitude data is now shown correctly
+* (bug 39284) sortable table should not consider . or ? to be a currency
 
 === API changes in 1.20 ===
 * (bug 34316) Add ability to retrieve maximum upload size from MediaWiki API.
